@@ -28,7 +28,9 @@ mainClassName = 'com.symmetrylabs.slstudio.SLStudio'
 //mainClassName = 'com.symmetrylabs.slstudio.SLHeadless'
 
 run {
-	jvmArgs '-Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=12345 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Djava.awt.headless=true'
+	if (JavaVersion.current() == JavaVersion.VERSION_1_8) {
+		jvmArgs '-XX:+UseParNewGC', '-XX:+UseConcMarkSweepGC'
+	}
 
 	// To select a layout from the command line, "gradlew run -Playout=cubes"
 	systemProperty 'com.symmetrylabs.layout', findProperty('layout')
@@ -134,7 +136,7 @@ dependencies {
 	// https://www.slf4j.org/manual.html
 	implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
 
-	implementation 'com.github.SymmetryLabs.p3lx:P3LX:93bfd7d'
+	implementation 'com.github.SymmetryLabs.p3lx:P3LX:f0b87df'
 
 	implementation files('libs/minim.jar')
 	implementation files('libs/jogamp-fat.jar')
